--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
         </p> 
         <a href="https://www.linkedin.com/in/agbo-agnes-0ba0a7224" class="fa fa-linkedin"></a>
 <a href="https://www.twitter.com/agnestreasure2" class="fa fa-twitter"></a>
-<a href="#" class="fa fa-github"></a>
+<a href="https://github.com/agnestreasure2" class="fa fa-github"></a>
 <a href="index.html" class="fa fa-home"></a>
 
     </div>
