--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <h3>Hello there!</h3>
                     <h1>I'm Agnes</h1>
                     <p>A Web developer with one month experience and a soon to be Mobile App Developer with
-                        basic knowledge of flutter for 6months, a digital marketer with a 3months experience,
+                        basic knowledge of flutter for months, also, a digital marketer with months experience,
                         and with the passion of learning with consistency to be where I want to be.
                     </p>
                 </div>
@@ -38,11 +38,10 @@
                         <div>
                             <h2>About Me</h2>
                             <p>I'm Agbo Agnes from Benue state, a student of federal university of technology Minna, a
-                                final
-                                year student of the department of Library and information technology. I'm currently
+                                final-year student of the department of Library and information technology. I'm currently
                                 learning mobile app development with Stutern with the help of the scholarship
                                 from Ingressive4good. One thing I always believe is that dreams do come through
-                                and I can be where I want to be with consistency and hardwork, I have never seen given
+                                and I can be where I want to be with consistency and hardwork, I have never seen giving
                                 up as an option.
                             </p>
                         </div>
